--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,25 @@
 <resources>
     <string name="app_name">FirstCode</string>
+
+    <string name="btn_open_hello_world">打开HelloWorld</string>
+    <string name="btn_open_first">打开FirstActivity</string>
+    <string name="btn_open_runtime_permission">打开RuntimePermission</string>
+    <string name="btn_open_contact">打开Contact</string>
+    <string name="btn_open_notification">打开Notification</string>
+    <string name="btn_open_camera">打开Camera</string>
+
     <string name="button1">Button1</string>
+    <string name="button3">Button3</string>
+    <string name="button2">Button2</string>
     <string name="remove">Remove</string>
     <string name="add">Add</string>
     <string name="make_call">Make Call</string>
-    <string name="btn_open_first">打开FirstActivity</string>
-    <string name="open_runtime_permission">打开RuntimePermission</string>
-    <string name="open_contact">打开Contact</string>
     <string name="notification_layout">This is notification layout</string>
     <string name="send_notice">Send Notice</string>
-    <string name="open_notification">打开Notification</string>
     <string name="take_photo">Take Photo</string>
     <string name="from_album">From Album</string>
-    <string name="open_camera">打开Camera</string>
     <string name="play">Play</string>
     <string name="pause">Pause</string>
     <string name="stop">Stop</string>
-    <string name="btn_open_hello_world">打开HelloWorld</string>
+
 </resources>
